--- a/invoice/resources/Template/HomogeneousInvoice.tex
+++ b/invoice/resources/Template/HomogeneousInvoice.tex
@@ -6,6 +6,7 @@
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage{textcomp}
+\usepackage{graphicx}
 \usepackage{eurosym}
 \newcounter{cnt}
 \setcounter{cnt}{0}
